pathway/CssParser/csst3Parser.cs
// $ANTLR 3.1.2 C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g 2013-01-18 15:58:55


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public class csst3Parser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"IMPORT", 
		"MEDIA", 
		"PAGE", 
		"REGION", 
		"RULE", 
		"ATTRIB", 
		"PARENTOF", 
		"PRECEDES", 
		"ATTRIBEQUAL", 
		"HASVALUE", 
		"BEGINSWITH", 
		"PSEUDO", 
		"PROPERTY", 
		"FUNCTION", 
		"ANY", 
		"TAG", 
		"ID", 
		"CLASS", 
		"STRING", 
		"IDENT", 
		"UNIT", 
		"NUM", 
		"COLOR", 
		"SL_COMMENT", 
		"COMMENT", 
		"WS", 
		"'@import'", 
		"'@include'", 
		"';'", 
		"'@media'", 
		"'{'", 
		"'}'", 
		"'@page'", 
		"'@'", 
		"','", 
		"'>'", 
		"'+'", 
		"'#'", 
		"'.'", 
		"'*'", 
		"':'", 
		"'::'", 
		"'['", 
		"']'", 
		"'='", 
		"'~='", 
		"'|='", 
		"'%'", 
		"'('", 
		"')'"
    };

    public const int FUNCTION = 17;
    public const int CLASS = 21;
    public const int ATTRIB = 9;
    public const int HASVALUE = 13;
    public const int PSEUDO = 15;
    public const int MEDIA = 5;
    public const int ID = 20;
    public const int EOF = -1;
    public const int ATTRIBEQUAL = 12;
    public const int COLOR = 26;
    public const int REGION = 7;
    public const int IMPORT = 4;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int T__53 = 53;
    public const int IDENT = 23;
    public const int COMMENT = 28;
    public const int T__50 = 50;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int T__46 = 46;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int RULE = 8;
    public const int T__45 = 45;
    public const int PARENTOF = 10;
    public const int BEGINSWITH = 14;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int PRECEDES = 11;
    public const int NUM = 25;
    public const int TAG = 19;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int UNIT = 24;
    public const int T__32 = 32;
    public const int WS = 29;
    public const int T__33 = 33;
    public const int PAGE = 6;
    public const int ANY = 18;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int PROPERTY = 16;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int SL_COMMENT = 27;
    public const int STRING = 22;

    // delegates
    // delegators



        public csst3Parser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public csst3Parser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
       }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return csst3Parser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g"; }
    }


    private System.Collections.Generic.List<System.String> errors = new System.Collections.Generic.List<System.String>();
    override public void DisplayRecognitionError(System.String[] tokenNames, RecognitionException e) {
        System.String hdr = GetErrorHeader(e);
        System.String msg = GetErrorMessage(e, tokenNames);
        errors.Add(hdr + " " + msg);
    }
    public System.Collections.Generic.List<System.String> GetErrors() {
        return errors;
    }


    public class stylesheet_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "stylesheet"
    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:45:1: stylesheet : ( importRule )* ( media | pageRule | ruleset )+ ;
    public csst3Parser.stylesheet_return stylesheet() // throws RecognitionException [1]
    {   
        csst3Parser.stylesheet_return retval = new csst3Parser.stylesheet_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        csst3Parser.importRule_return importRule1 = null;

        csst3Parser.media_return media2 = null;

        csst3Parser.pageRule_return pageRule3 = null;

        csst3Parser.ruleset_return ruleset4 = null;



        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:2: ( ( importRule )* ( media | pageRule | ruleset )+ )
            // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:4: ( importRule )* ( media | pageRule | ruleset )+
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:4: ( importRule )*
            	do 
            	{
            	    int alt1 = 2;
            	    alt1 = dfa1.Predict(input);
            	    switch (alt1) 
            		{
            			case 1 :
            			    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:4: importRule
            			    {
            			    	PushFollow(FOLLOW_importRule_in_stylesheet146);
            			    	importRule1 = importRule();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, importRule1.Tree);

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:16: ( media | pageRule | ruleset )+
            	int cnt2 = 0;
            	do 
            	{
            	    int alt2 = 4;
            	    alt2 = dfa2.Predict(input);
            	    switch (alt2) 
            		{
            			case 1 :
            			    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:17: media
            			    {
            			    	PushFollow(FOLLOW_media_in_stylesheet150);
            			    	media2 = media();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, media2.Tree);

            			    }
            			    break;
            			case 2 :
            			    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:25: pageRule
            			    {
            			    	PushFollow(FOLLOW_pageRule_in_stylesheet154);
            			    	pageRule3 = pageRule();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, pageRule3.Tree);

            			    }
            			    break;
            			case 3 :
            			    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:46:36: ruleset
            			    {
            			    	PushFollow(FOLLOW_ruleset_in_stylesheet158);
            			    	ruleset4 = ruleset();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, ruleset4.Tree);

            			    }
            			    break;

            			default:
            			    if ( cnt2 >= 1 ) goto loop2;
            		            EarlyExitException eee2 =
            		                new EarlyExitException(2, input);
            		            throw eee2;
            	    }
            	    cnt2++;
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whinging that label 'loop2' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "stylesheet"

    public class importRule_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "importRule"
    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:49:1: importRule : ( ( '@import' | '@include' ) STRING ';' -> ^( IMPORT STRING ) | ( '@import' | '@include' ) function ';' -> ^( IMPORT function ) );
    public csst3Parser.importRule_return importRule() // throws RecognitionException [1]
    {   
        csst3Parser.importRule_return retval = new csst3Parser.importRule_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal5 = null;
        IToken string_literal6 = null;
        IToken STRING7 = null;
        IToken char_literal8 = null;
        IToken string_literal9 = null;
        IToken string_literal10 = null;
        IToken char_literal12 = null;
        csst3Parser.function_return function11 = null;


        CommonTree string_literal5_tree=null;
        CommonTree string_literal6_tree=null;
        CommonTree STRING7_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree string_literal9_tree=null;
        CommonTree string_literal10_tree=null;
        CommonTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_30 = new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_32 = new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31 = new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_STRING = new RewriteRuleTokenStream(adaptor,"token STRING");
        RewriteRuleSubtreeStream stream_function = new RewriteRuleSubtreeStream(adaptor,"rule function");
        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:50:2: ( ( '@import' | '@include' ) STRING ';' -> ^( IMPORT STRING ) | ( '@import' | '@include' ) function ';' -> ^( IMPORT function ) )
            int alt5 = 2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0 == 30) )
            {
                int LA5_1 = input.LA(2);

                if ( (LA5_1 == IDENT) )
                {
                    alt5 = 2;
                }
                else if ( (LA5_1 == STRING) )
                {
                    alt5 = 1;
                }
                else 
                {
                    NoViableAltException nvae_d5s1 =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae_d5s1;
                }
            }
            else if ( (LA5_0 == 31) )
            {
                int LA5_2 = input.LA(2);

                if ( (LA5_2 == STRING) )
                {
                    alt5 = 1;
                }
                else if ( (LA5_2 == IDENT) )
                {
                    alt5 = 2;
                }
                else 
                {
                    NoViableAltException nvae_d5s2 =
                        new NoViableAltException("", 5, 2, input);

                    throw nvae_d5s2;
                }
            }
            else 
            {
                NoViableAltException nvae_d5s0 =
                    new NoViableAltException("", 5, 0, input);

                throw nvae_d5s0;
            }
            switch (alt5) 
            {
                case 1 :
                    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:50:4: ( '@import' | '@include' ) STRING ';'
                    {
                    	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:50:4: ( '@import' | '@include' )
                    	int alt3 = 2;
                    	int LA3_0 = input.LA(1);

                    	if ( (LA3_0 == 30) )
                    	{
                    	    alt3 = 1;
                    	}
                    	else if ( (LA3_0 == 31) )
                    	{
                    	    alt3 = 2;
                    	}
                    	else 
                    	{
                    	    NoViableAltException nvae_d3s0 =
                    	        new NoViableAltException("", 3, 0, input);

                    	    throw nvae_d3s0;
                    	}
                    	switch (alt3) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:50:5: '@import'
                    	        {
                    	        	string_literal5=(IToken)Match(input,30,FOLLOW_30_in_importRule172);  
                    	        	stream_30.Add(string_literal5);


                    	        }
                    	        break;
                    	    case 2 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:50:17: '@include'
                    	        {
                    	        	string_literal6=(IToken)Match(input,31,FOLLOW_31_in_importRule176);  
                    	        	stream_31.Add(string_literal6);


                    	        }
                    	        break;

                    	}

                    	STRING7=(IToken)Match(input,STRING,FOLLOW_STRING_in_importRule180);  
                    	stream_STRING.Add(STRING7);

                    	char_literal8=(IToken)Match(input,32,FOLLOW_32_in_importRule182);  
                    	stream_32.Add(char_literal8);



                    	// AST REWRITE
                    	// elements:          STRING
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (CommonTree)adaptor.GetNilNode();
                    	// 50:41: -> ^( IMPORT STRING )
                    	{
                    	    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:50:44: ^( IMPORT STRING )
                    	    {
                    	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
                    	    root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(IMPORT, "IMPORT"), root_1);

                    	    adaptor.AddChild(root_1, stream_STRING.NextNode());

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 2 :
                    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:51:4: ( '@import' | '@include' ) function ';'
                    {
                    	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:51:4: ( '@import' | '@include' )
                    	int alt4 = 2;
                    	int LA4_0 = input.LA(1);

                    	if ( (LA4_0 == 30) )
                    	{
                    	    alt4 = 1;
                    	}
                    	else if ( (LA4_0 == 31) )
                    	{
                    	    alt4 = 2;
                    	}
                    	else 
                    	{
                    	    NoViableAltException nvae_d4s0 =
                    	        new NoViableAltException("", 4, 0, input);

                    	    throw nvae_d4s0;
                    	}
                    	switch (alt4) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:51:5: '@import'
                    	        {
                    	        	string_literal9=(IToken)Match(input,30,FOLLOW_30_in_importRule198);  
                    	        	stream_30.Add(string_literal9);


                    	        }
                    	        break;
                    	    case 2 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:51:17: '@include'
                    	        {
                    	        	string_literal10=(IToken)Match(input,31,FOLLOW_31_in_importRule202);  
                    	        	stream_31.Add(string_literal10);


                    	        }
                    	        break;

                    	}

                    	PushFollow(FOLLOW_function_in_importRule206);
                    	function11 = function();
                    	state.followingStackPointer--;

                    	stream_function.Add(function11.Tree);
                    	char_literal12=(IToken)Match(input,32,FOLLOW_32_in_importRule208);  
                    	stream_32.Add(char_literal12);



                    	// AST REWRITE
                    	// elements:          function
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (CommonTree)adaptor.GetNilNode();
                    	// 51:43: -> ^( IMPORT function )
                    	{
                    	    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:51:46: ^( IMPORT function )
                    	    {
                    	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
                    	    root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(IMPORT, "IMPORT"), root_1);

                    	    adaptor.AddChild(root_1, stream_function.NextTree());

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "importRule"

    public class media_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "media"
    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:54:1: media : '@media' IDENT '{' ( pageRule | ruleset )+ '}' -> ^( MEDIA IDENT ( pageRule )* ( ruleset )* ) ;
    public csst3Parser.media_return media() // throws RecognitionException [1]
    {   
        csst3Parser.media_return retval = new csst3Parser.media_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal13 = null;
        IToken IDENT14 = null;
        IToken char_literal15 = null;
        IToken char_literal18 = null;
        csst3Parser.pageRule_return pageRule16 = null;

        csst3Parser.ruleset_return ruleset17 = null;


        CommonTree string_literal13_tree=null;
        CommonTree IDENT14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree char_literal18_tree=null;
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_35 = new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_33 = new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_34 = new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_ruleset = new RewriteRuleSubtreeStream(adaptor,"rule ruleset");
        RewriteRuleSubtreeStream stream_pageRule = new RewriteRuleSubtreeStream(adaptor,"rule pageRule");
        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:2: ( '@media' IDENT '{' ( pageRule | ruleset )+ '}' -> ^( MEDIA IDENT ( pageRule )* ( ruleset )* ) )
            // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:4: '@media' IDENT '{' ( pageRule | ruleset )+ '}'
            {
            	string_literal13=(IToken)Match(input,33,FOLLOW_33_in_media229);  
            	stream_33.Add(string_literal13);

            	IDENT14=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_media231);  
            	stream_IDENT.Add(IDENT14);

            	char_literal15=(IToken)Match(input,34,FOLLOW_34_in_media233);  
            	stream_34.Add(char_literal15);

            	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:23: ( pageRule | ruleset )+
            	int cnt6 = 0;
            	do 
            	{
            	    int alt6 = 3;
            	    alt6 = dfa6.Predict(input);
            	    switch (alt6) 
            		{
            			case 1 :
            			    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:24: pageRule
            			    {
            			    	PushFollow(FOLLOW_pageRule_in_media236);
            			    	pageRule16 = pageRule();
            			    	state.followingStackPointer--;

            			    	stream_pageRule.Add(pageRule16.Tree);

            			    }
            			    break;
            			case 2 :
            			    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:35: ruleset
            			    {
            			    	PushFollow(FOLLOW_ruleset_in_media240);
            			    	ruleset17 = ruleset();
            			    	state.followingStackPointer--;

            			    	stream_ruleset.Add(ruleset17.Tree);

            			    }
            			    break;

            			default:
            			    if ( cnt6 >= 1 ) goto loop6;
            		            EarlyExitException eee6 =
            		                new EarlyExitException(6, input);
            		            throw eee6;
            	    }
            	    cnt6++;
            	} while (true);

            	loop6:
            		;	// Stops C# compiler whinging that label 'loop6' has no statements

            	char_literal18=(IToken)Match(input,35,FOLLOW_35_in_media244);  
            	stream_35.Add(char_literal18);



            	// AST REWRITE
            	// elements:          pageRule, IDENT, ruleset
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (CommonTree)adaptor.GetNilNode();
            	// 55:49: -> ^( MEDIA IDENT ( pageRule )* ( ruleset )* )
            	{
            	    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:52: ^( MEDIA IDENT ( pageRule )* ( ruleset )* )
            	    {
            	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
            	    root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(MEDIA, "MEDIA"), root_1);

            	    adaptor.AddChild(root_1, stream_IDENT.NextNode());
            	    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:67: ( pageRule )*
            	    while ( stream_pageRule.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_pageRule.NextTree());

            	    }
            	    stream_pageRule.Reset();
            	    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:55:77: ( ruleset )*
            	    while ( stream_ruleset.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_ruleset.NextTree());

            	    }
            	    stream_ruleset.Reset();

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;
            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "media"

    public class pageRule_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "pageRule"
    // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:58:1: pageRule : '@page' ( IDENT )? ( pseudo )? '{' ( properties )? ( region )* '}' -> ^( PAGE ( IDENT )* ( pseudo )* ( properties )* ( region )* ) ;
    public csst3Parser.pageRule_return pageRule() // throws RecognitionException [1]
    {   
        csst3Parser.pageRule_return retval = new csst3Parser.pageRule_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal19 = null;
        IToken IDENT20 = null;
        IToken char_literal22 = null;
        IToken char_literal25 = null;
        csst3Parser.pseudo_return pseudo21 = null;

        csst3Parser.properties_return properties23 = null;

        csst3Parser.region_return region24 = null;


        CommonTree string_literal19_tree=null;
        CommonTree IDENT20_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree char_literal25_tree=null;
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_35 = new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_36 = new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_34 = new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_region = new RewriteRuleSubtreeStream(adaptor,"rule region");
        RewriteRuleSubtreeStream stream_pseudo = new RewriteRuleSubtreeStream(adaptor,"rule pseudo");
        RewriteRuleSubtreeStream stream_properties = new RewriteRuleSubtreeStream(adaptor,"rule properties");
        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:3: ( '@page' ( IDENT )? ( pseudo )? '{' ( properties )? ( region )* '}' -> ^( PAGE ( IDENT )* ( pseudo )* ( properties )* ( region )* ) )
            // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:5: '@page' ( IDENT )? ( pseudo )? '{' ( properties )? ( region )* '}'
            {
            	string_literal19=(IToken)Match(input,36,FOLLOW_36_in_pageRule272);  
            	stream_36.Add(string_literal19);

            	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:13: ( IDENT )?
            	int alt7 = 2;
            	int LA7_0 = input.LA(1);

            	if ( (LA7_0 == IDENT) )
            	{
            	    alt7 = 1;
            	}
            	switch (alt7) 
            	{
            	    case 1 :
            	        // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:13: IDENT
            	        {
            	        	IDENT20=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_pageRule274);  
            	        	stream_IDENT.Add(IDENT20);


            	        }
            	        break;

            	}

            	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:20: ( pseudo )?
            	int alt8 = 2;
            	int LA8_0 = input.LA(1);

            	if ( ((LA8_0 >= 44 && LA8_0 <= 45)) )
            	{
            	    alt8 = 1;
            	}
            	switch (alt8) 
            	{
            	    case 1 :
            	        // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:20: pseudo
            	        {
            	        	PushFollow(FOLLOW_pseudo_in_pageRule277);
            	        	pseudo21 = pseudo();
            	        	state.followingStackPointer--;

            	        	stream_pseudo.Add(pseudo21.Tree);

            	        }
            	        break;

            	}

            	char_literal22=(IToken)Match(input,34,FOLLOW_34_in_pageRule280);  
            	stream_34.Add(char_literal22);

            	// C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:32: ( properties )?
            	int alt9 = 2;
            	int LA9_0 = input.LA(1);

            	if ( (LA9_0 == IDENT) )
            	{
            	    alt9 = 1;
            	}
            	switch (alt9) 
            	{
            	    case 1 :
            	        // C:\\Users\\Trihus\\git\\pathway\\pathway\\CssParser\\csst3.g:59:32: properties
            	        {
            	        	PushFollow(FOLLOW_properties_in_pageRule282);
            	        	properties23 = properties();
            	        	state.followingStackPointer--;

            	        	stream_properties.Add(properties23.Tree);

            	        }
            	        break;

            	}

